--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "expo": "~50.0.7",
     "expo-dev-client": "~3.3.8",
     "expo-font": "~11.10.3",
@@ -20,7 +22,9 @@
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-redux": "^9.1.0",
+    "redux-saga": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
